--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,10 @@
 upstream django_server {
-    server django_app:8000;
+    server app:8000;
 }
 server {
     listen 80;
     server_name ~^(?<subdomain>.+)\.127.0.0.1;
-    server_name www.tikishsara.com;
+    server_name www.ecuzev.ir;
 
     location /static {
         alias /app/static;
